--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "react-snake-loader",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "babel src --out-dir dist --copy-files",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-snake-loader": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -25,7 +30,7 @@
     "vite": "^7.0.4"
   },
   "description": "A fun animated snake loader component for React applications.",
-  "main": "index.js",
+  "main": "dist/SnakeLoader.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Krish-H/react-snake-loader.git"
